test/errors/e13.gm
Procedure foo()
{
    Graph G;
    N_P<Int>(G) A;
    E_P<Int>(G) B;

    Node(G) x;
    Edge(G) y;
    x.B = 0;
    y.A = 1;
}
